--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,12 @@ dependencies {
     runtime "org.slf4j:slf4j-simple:1.7.36"
     testCompile "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
 
+    // To fix vulnerability CVE-2020-13956.
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+    // To fix vulnerability CVE-2020-0187, CVE-2020-15522, CVE-2020-28052.
+    implementation "org.bouncycastle:bcprov-jdk15on:1.70"
+
     integrationTestImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
     integrationTestImplementation "org.spockframework:spock-core"
 
