--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ dependencies {
         exclude module: "xmlsec"
         exclude group: "org.bouncycastle"
     }
-    runtime "org.slf4j:slf4j-simple:1.7.36"
-    testCompile "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
+    runtimeOnly "org.slf4j:slf4j-simple:1.7.36"
+    testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
 
     // To fix vulnerability CVE-2020-13956.
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
