--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,9 @@ dependencies {
     api "org.apache.pdfbox:pdfbox:2.0.27"
     api "org.apache.santuario:xmlsec:2.3.1"
     api "org.slf4j:slf4j-api:1.7.36"
-    api "org.json:json:20220320"
+    api("org.json:json:20220924") {
+        exclude group: 'cn.hutool', module: 'hutool-json'
+    }
     api "org.slf4j:slf4j-simple:1.7.36"
     api "org.apache.httpcomponents:httpclient:4.5.13"
     api "org.bouncycastle:bcprov-jdk15on:1.70"
