--- a/build.gradle
+++ b/build.gradle
@@ -31,15 +31,15 @@ configurations.configureEach {
 }
 
 dependencies {
-    api "eu.europa.ec.joinup.sd-dss:dss-xades:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-cades:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-pades:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-pades-pdfbox:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-service:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-utils:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:$dssVersion"
-    api "eu.europa.ec.joinup.sd-dss:dss-tsl-validation:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-xades:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-cades:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-pades:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-pades-pdfbox:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-service:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-utils:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-tsl-validation:${dssVersion}"
     api "org.apache.pdfbox:pdfbox:2.0.31"
     api "org.apache.santuario:xmlsec:2.3.4"
     api "org.slf4j:slf4j-api:2.0.13"
@@ -66,8 +66,8 @@ dependencies {
     implementation "joda-time:joda-time:2.10.14"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.17.1"
 
-    testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:$dssVersion"
-    testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:$dssVersion"
+    testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:${dssVersion}"
+    testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:${dssVersion}"
     testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
     testImplementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatEmbedVersion}"
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
