--- a/build.gradle
+++ b/build.gradle
@@ -44,17 +44,17 @@ dependencies {
     api "org.apache.santuario:xmlsec:2.3.4"
     api "org.slf4j:slf4j-api:2.0.16"
     api "org.slf4j:slf4j-simple:2.0.16"
-    api("org.json:json:20240303") {
+    api("org.json:json:20250107") {
         exclude group: 'cn.hutool', module: 'hutool-json'
     }
     api("org.springframework:spring-context:5.3.39") {
         exclude module: "spring-beans"
     }
-    api("org.certificateservices.messages:certservice-messages:2408.1")
+    api("org.certificateservices.messages:certservice-messages:2411.1")
     if (project.rootProject.name == "signservice") {
         api project(":signservice-java-configuration")
     } else {
-        api("se.signatureservice.configuration:signservice-java-configuration:v2408.1")
+        api("se.signatureservice.configuration:signservice-java-configuration:2501.1")
     }
     implementation "joda-time:joda-time:2.10.14"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.17.3"
